<resources>
    <string name="app_name">SocNetwork</string>
    <string name="beforeNameUser">Name: </string>
    <string name="beforeEmailUser">Email: </string>
    <string name="beforeHobbyUser">Hobby: </string>
    <string name="beforeLastOnlineUser">Last online: </string>
    <string name="buttonEdit">EDIT PROFILE</string>
    <string name="tittleFollowing">FOLLOWING</string>
    <string name="tittleFollowers">FOLLOWERS</string>
    <string name="tittlePosts">%1$S POSTS</string>
    <string name="tittleLikes">%1$S LIKES</string>
    <string name="buttonRemove">REMOVE PROFILE</string>


    <string name="mainTittleUserEdit">Сторінка редагування нового юзера</string>
    <string name="nameTittleEdit">Edit username</string>
    <string name="emailTittleEdit">Edit email</string>
    <string name="hobbyTittleEdit">Edit hobby</string>
    <string name="lastOnlineTittleEdit">Edit time last online</string>
    <string name="photoTittleEdit">Edit link user photo</string>
    <string name="aboutTittleEdit">Edit information about user</string>
    <string name="followingTittleEdit">Edit number following</string>
    <string name="followersTittleEdit">Edit nubber followers</string>
    <string name="postsTittleEdit">Edit tittle for posts</string>
    <string name="likesTittleEdit">Edit number likes of posts</string>



    <string name="mainTittleUserNew">Сторінка створення наявного юзера</string>
    <string name="nameTittleNew">New username</string>
    <string name="emailTittleNew">New email</string>
    <string name="hobbyTittleNew">New hobby</string>
    <string name="lastOnlineTittleNew">New time last online</string>
    <string name="photoTittleNew">New link user photo</string>
    <string name="aboutTittleNew">New information about user</string>
    <string name="followingTittleNew">New number following</string>
    <string name="followersTittleNew">New nubber followers</string>
    <string name="postsTittleNew">New tittle for posts</string>
    <string name="likesTittleNew">New number likes of posts</string>


    <string name="nameUserPlaceholder">Name</string>
    <string name="emailUserPlaceholder">Email</string>
    <string name="photoUserPlaceholder">Link for photo</string>
    <string name="aboutUserPlaceholder">About</string>
    <string name="textButtonAddNewUser">Add New User</string>




    <string name="fa_solid_about_me">&#xf007;</string>
    <string name="fa_solid_email">&#xf0e0;</string>
    <string name="fa_solid_hobbies">&#xf206;</string>
    <string name="fa_solid_last_online">&#xf017;</string>
</resources>